[package]
name = "corridorkey-gui"
version = "0.8.5"
description = "CorridorKey Native Runtime GUI"
authors = ["Alexandre Alvaro"]
edition = "2021"

[lib]
name = "corridorkey_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
