[package]
name = "corridorkey-gui"
version = "0.9.1"
description = "CorridorKey Native Runtime GUI"
authors = ["Alexandre Alvaro"]
edition = "2021"

[lib]
name = "corridorkey_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
